--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,8 @@ jobs:
         uses: azzarb/composite-action@main
         with:
           who-to-greet: 'Mona the Octocat'
+          
+      - run: | 
+          chmod +x goodbye.sh
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
         shell: bash
