--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ jobs:
         with:
           who-to-greet: 'Mona the Octocat'
           
-      - run: | 
-          chmod +x goodbye.sh
+      - run: chmod +x goodbye.sh
       - run: echo random-number ${{ steps.foo.outputs.random-number }}
         shell: bash
