--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           who-to-greet: 'Mona the Octocat'
           
-      - run: echo random-number ${{ steps.foo.outputs.random-number }}
+      - run: |
+          cd ${{ github.action_path }}
           chmod +x goodbye.sh
         shell: bash
