--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - id: foo
         uses: azzarb/composite-action@main
         with:
-          who-to-greet: 'Mona the Octocat'
+          who-to-greet: 'Azeem the Mandalorian'
           
       - run: |
           cd ${{ github.main.yml }}
