--- a/action.yml
+++ b/action.yml
@@ -19,5 +19,8 @@ runs:
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash
-    - run: goodbye.sh
+    - run: |
+        goodbye.sh
+        chmod +x goodbye.sh
+
       shell: bash
