--- a/action.yml
+++ b/action.yml
@@ -19,8 +19,6 @@ runs:
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash
-    - run: |
-        goodbye.sh
-        chmod +x goodbye.sh
+    - run: chmod +x /goodbye.sh
 
       shell: bash
